--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
+    "cloudinary-core": "^2.13.0",
+    "cloudinary-react": "^1.8.1",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
